--- a/Unit01_Crash Course on Python.ipynb
+++ b/Unit01_Crash Course on Python.ipynb
@@ -35,11 +35,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "輸入一數字判斷奇數或偶數 2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "偶數\n"
+     ]
+    }
+   ],
    "source": [
+    "# 當使用者輸入一個的數字，它能夠辨別奇偶，並輸出檢驗結果給使用者\n",
+    "\n",
     "x = int(input(\"輸入一數字判斷奇數或偶數\"))\n",
+    "\n",
     "if x%2 == 0:\n",
     "    print(\"偶數\")\n",
     "else:\n",
@@ -48,11 +66,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "輸入一數字判斷奇數或偶數（1 到 1000） 5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "奇數\n"
+     ]
+    }
+   ],
    "source": [
+    "# 進階: 可以限制輸入一個介於一定範圍（例如 1 到 1000）的數字\n",
+    "\n",
     "x = int(input(\"輸入一數字判斷奇數或偶數（1 到 1000）\"))\n",
+    "\n",
     "if 1 <= x <= 1000:\n",
     "    if x%2 == 0:\n",
     "        print(\"偶數\")\n",
@@ -146,6 +182,8 @@
     }
    ],
    "source": [
+    "# 進階: 可以輸入一個介於一定範圍（例如 1 到 1000）的數字，直到輸入0結束\n",
+    "\n",
     "while True:\n",
     "    \n",
     "    x = int(input(\"輸入一數字判斷奇數或偶數（1 到 1000）（輸入0結束）\"))\n",
@@ -177,13 +215,151 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "請以空格分隔，依序輸入你的姓名、年紀、職業、興趣及短期目標 a b c d e\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "我叫a，今年b歲，職業是c，興趣是d，短期目標為e\n"
+     ]
+    }
+   ],
    "source": [
-    "x = ''\n",
-    "y = ''\n",
-    "z = ''\n"
+    "# 使用者輸入任何字，它可以是名詞、形容詞、動詞、代名詞等。程式得到文字後，可自行排列，組成成一個模板故事。\n",
+    "\n",
+    "a, b, c, d, e = input(\"請以空格分隔，依序輸入你的姓名、年紀、職業、興趣及短期目標\").split()\n",
+    "\n",
+    "print(f\"我叫{a}，今年{b}歲，職業是{c}，興趣是{d}，短期目標為{e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "有幾位學生？ 4\n",
+      "請以空格分隔，依序輸入你的姓名、年紀、職業、興趣及短期目標 a1 a2 a3 a4 a5\n",
+      "請以空格分隔，依序輸入你的姓名、年紀、職業、興趣及短期目標 b1 b2 b3 b4 b5\n",
+      "請以空格分隔，依序輸入你的姓名、年紀、職業、興趣及短期目標 c1 c2 c3 c4 c5\n",
+      "請以空格分隔，依序輸入你的姓名、年紀、職業、興趣及短期目標 d1 d2 d3 d4 d5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "======共4筆個人資料======\n",
+      "====個人資料1====\n",
+      "姓名：a1\n",
+      "年紀：a2歲\n",
+      "職業：a3\n",
+      "興趣：a4\n",
+      "短期目標：a5\n",
+      "====個人資料2====\n",
+      "姓名：b1\n",
+      "年紀：b2歲\n",
+      "職業：b3\n",
+      "興趣：b4\n",
+      "短期目標：b5\n",
+      "====個人資料3====\n",
+      "姓名：c1\n",
+      "年紀：c2歲\n",
+      "職業：c3\n",
+      "興趣：c4\n",
+      "短期目標：c5\n",
+      "====個人資料4====\n",
+      "姓名：d1\n",
+      "年紀：d2歲\n",
+      "職業：d3\n",
+      "興趣：d4\n",
+      "短期目標：d5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 進階: 可以讓程式重複執行N次\n",
+    "\n",
+    "data = []\n",
+    "\n",
+    "x = int(input(\"有幾位學生？\"))\n",
+    "\n",
+    "for i in range(x):\n",
+    "    \n",
+    "    a, b, c, d, e = input(\"請以空格分隔，依序輸入你的姓名、年紀、職業、興趣及短期目標\").split()\n",
+    "        \n",
+    "    data.append((a, b, c, d, e)) #tuple\n",
+    "\n",
+    "print(f\"======共{len(data)}筆個人資料======\")\n",
+    "\n",
+    "for idx, (a, b, c, d, e) in enumerate(data):\n",
+    "    print(f\"====個人資料{idx+1}====\\n姓名：{a}\\n年紀：{b}歲\\n職業：{c}\\n興趣：{d}\\n短期目標：{e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "請以空格分隔，依序輸入你的姓名、年紀、職業、興趣及短期目標（輸入5個0結束，記得空格） 1 2 3 4 5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "====個人資料====\n",
+      "姓名：1\n",
+      "年紀：2歲\n",
+      "職業：3\n",
+      "興趣：4\n",
+      "短期目標：5\n",
+      "===============\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "請以空格分隔，依序輸入你的姓名、年紀、職業、興趣及短期目標（輸入5個0結束，記得空格） 0 0 0 0 0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "程式結束\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 進階: 可以讓程式重複執行，直到輸入0 0 0 0 0結束\n",
+    "\n",
+    "while True:\n",
+    "    \n",
+    "    a, b, c, d, e = input(\"請以空格分隔，依序輸入你的姓名、年紀、職業、興趣及短期目標（輸入5個0結束，記得空格）\").split()\n",
+    "    \n",
+    "    if (a + b + c + d + e) != \"00000\":\n",
+    "        print(f\"====個人資料====\\n姓名：{a}\\n年紀：{b}歲\\n職業：{c}\\n興趣：{d}\\n短期目標：{e}\\n===============\")\n",
+    "    else:\n",
+    "        print(\"程式結束\")\n",
+    "        break"
    ]
   },
   {
@@ -200,10 +376,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "猜數字範圍 0 < ? < 100； 5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "再大一點！！ 您猜了1次，輸入0可以結束遊戲\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "猜數字範圍 5 < ? < 100； 50\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "再小一點！！ 您猜了2次，輸入0可以結束遊戲\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "猜數字範圍 5 < ? < 50； 30\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "再大一點！！ 您猜了3次，輸入0可以結束遊戲\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "猜數字範圍 30 < ? < 50； 40\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "再小一點！！ 您猜了4次，輸入0可以結束遊戲\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "猜數字範圍 30 < ? < 40； 35\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "再小一點！！ 您猜了5次，輸入0可以結束遊戲\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "猜數字範圍 30 < ? < 35； 34\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "再小一點！！ 您猜了6次，輸入0可以結束遊戲\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "猜數字範圍 30 < ? < 34； 33\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "賓果！ 猜對了，答案是33，總共猜了7次\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 請使用者猜一個介於範圍（例如 1 到 100）之間的數字\n",
+    "\n",
+    "import random\n",
+    "\n",
+    "a = random.randint(1, 99)\n",
+    "\n",
+    "low, high = 0, 100\n",
+    "\n",
+    "i = 0\n",
+    "\n",
+    "while True:\n",
+    "    \n",
+    "    x = int(input(f\"猜數字範圍 {low} < ? < {high}；\"))\n",
+    "    \n",
+    "    i = i + 1\n",
+    "        \n",
+    "    if x == 0:\n",
+    "        break    \n",
+    "    elif x == a:\n",
+    "        print(f\"賓果！ 猜對了，答案是{a}，總共猜了{i}次\")\n",
+    "        break\n",
+    "    elif not (low < x < high):\n",
+    "        print(f\"超過範圍了喔！ 您猜了{i}次，輸入0可以結束遊戲\")\n",
+    "    elif a < x:\n",
+    "        print(f\"再小一點！！ 您猜了{i}次，輸入0可以結束遊戲\")\n",
+    "        high = x\n",
+    "    elif x < a:    \n",
+    "        print(f\"再大一點！！ 您猜了{i}次，輸入0可以結束遊戲\")\n",
+    "        low = x\n",
+    "    else:\n",
+    "        print(f\"超過範圍了喔！ 您猜了{i}次，輸入0可以結束遊戲\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -224,14 +531,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "輸入一段文字，統計字元數 Python is fun.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "你用了 14 個文字述說內心的想法\n"
+     ]
+    }
+   ],
    "source": [
-    "word = input()\n",
-    "print(\"你用了 %d 個文字述說內心的想法\"%(len(word)))\n",
+    "# 使用者輸入一段文字，程式統計字數\n",
     "\n",
+    "word = input(\"輸入一段文字，統計字元數\")\n",
+    "print(\"你用了 %d 個文字述說內心的想法\"%(len(word)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "請輸入1或2：\n",
+      "1.輸入一段文字\n",
+      "2.讀取一個檔案 1\n",
+      "輸入一段文字，統計字元數 It's rain.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "你用了 10 個文字述說內心的想法\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 使用者輸入一段文字或讀取一檔案，程式統計字數\n",
     "\n",
+    "import os\n",
+    "import chardet\n",
+    "\n",
+    "x = int(input(\"請輸入1或2：\\n1.輸入一段文字\\n2.讀取一個檔案\"))\n",
+    "\n",
+    "if x == 1:\n",
+    "    word = input(\"輸入一段文字，統計字元數\")\n",
+    "    print(\"你用了 %d 個文字述說內心的想法\" % (len(word)))\n",
+    "\n",
+    "elif x == 2:\n",
+    "    \n",
+    "    while True:\n",
+    "        print(f\"當前檔案位置為：{os.getcwd()}\") \n",
+    "        filename = input(\"輸入檔案名稱（例如：123.txt）：\")\n",
+    "        \n",
+    "        try:\n",
+    "            with open(filename, \"rb\") as f:\n",
+    "                raw_data = f.read()\n",
+    "                \n",
+    "            # 自動偵測編碼\n",
+    "            detected = chardet.detect(raw_data)\n",
+    "            encoding = detected['encoding']\n",
+    "            \n",
+    "            data = raw_data.decode(encoding) #轉文字\n",
+    "            \n",
+    "            print(data)\n",
+    "            print(\"總字元數：\", len(data))\n",
+    "            \n",
+    "            break\n",
+    "        \n",
+    "        except FileNotFoundError:\n",
+    "            print(\"找不到檔案\")\n",
+    "            \n",
+    "        except Exception as e:\n",
+    "            print(\"讀檔失敗，原因：\", e)\n",
+    "        \n",
+    "else:\n",
+    "    print(\"請輸入1或2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "請輸入一文字 天\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n",
+      "漢皇重色思傾國御宇多年求不得楊家有女初長成養在深閏人未識天生麗質難自棄一朝選在君王側回眸一笑百媚生六\n",
+      "文章總字數: 840\n",
+      "不\n",
+      "14\n"
+     ]
+    }
+   ],
+   "source": [
     "s = '''漢皇重色思傾國，御宇多年求不得。\n",
     "\n",
     "楊家有女初長成，養在深閏人未識。\n",
@@ -353,27 +768,274 @@
     "天長地久有時盡，此恨綿綿無絕期。\n",
     "'''\n",
     "\n",
-    "print (\"------------------------------------------\")\n",
     "#請使用者輸入一文字\n",
     "#計算該文字在文章出現次數\n",
     "#列印出現次數\n",
+    "tt = input(\"請輸入一文字\")\n",
+    "print(s.count(tt))\n",
     "\n",
-    "print (\"------------------------------------------\")\n",
-    "#把文字中 '。，\\n；：？「」'的標點符號去除\n",
+    "#把變數s中 '。，\\n；：？「」'的標點符號去除\n",
+    "for i in '。，\\n；：？「」':\n",
+    "    # print(i)\n",
+    "    s = s.replace(i, '')\n",
+    "print(s[:50])\n",
     "\n",
     "#目前已知出現最多次的字的次數\n",
     "#目前已知出現最多次的字\n",
     " \n",
     "print('文章總字數:',len(s))\n",
     "\n",
+    "maxct = 0\n",
+    "maxchar = ''\n",
+    "\n",
     "for astr in s:\n",
     "    #print(astr)\n",
-    "    act=s.count(astr)\n",
+    "    act = s.count(astr)\n",
     "    # 如果 現在這個字出現的次數(act) 大於 目前已知出現最多次字的次數\n",
+    "    if act > maxct:\n",
     "        #就讓 現在這個字出現的次數 成為 目前已知出現最多次的字的次數\n",
+    "        maxct = act\n",
     "        #還要記錄 現在這個字(astr) 到 目前已知出現最多次的字\n",
+    "        maxchar = astr\n",
+    "\n",
+    "print(maxchar)\n",
+    "print(maxct)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "請輸入1或2：\n",
+      "1.輸入一段文字\n",
+      "2.讀取一個檔案 1\n",
+      "輸入一段文字，統計字元數 2323\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "你用了 4 個文字述說內心的想法\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "請輸入一個文字，計算文字出現的次數： 2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "共出現 2 次\n"
+     ]
+    }
+   ],
+   "source": [
+    "#請使用者輸入一段文字或讀取一個檔案，統計字元數\n",
+    "##請使用者輸入一文字\n",
+    "#計算該文字在文章出現次數\n",
+    "#列印出現次數\n",
+    "\n",
+    "import os\n",
+    "import chardet\n",
+    "\n",
+    "x = int(input(\"請輸入1或2：\\n1.輸入一段文字\\n2.讀取一個檔案\"))\n",
+    "\n",
+    "if x == 1:\n",
+    "    data = input(\"輸入一段文字，統計字元數\")\n",
+    "    print(\"你用了 %d 個文字述說內心的想法\" % (len(data)))\n",
+    "\n",
+    "elif x == 2:\n",
+    "    \n",
+    "    while True:\n",
+    "        print(f\"當前檔案位置為：{os.getcwd()}\") \n",
+    "        filename = input(\"輸入檔案名稱（例如：123.txt）：\")\n",
+    "        \n",
+    "        try:\n",
+    "            with open(filename, \"rb\") as f:\n",
+    "                raw_data = f.read()\n",
+    "                \n",
+    "            # 自動偵測編碼\n",
+    "            detected = chardet.detect(raw_data)\n",
+    "            encoding = detected['encoding']\n",
+    "            \n",
+    "            data = raw_data.decode(encoding) #轉文字\n",
+    "            \n",
+    "            # print(data)\n",
+    "            print(\"總字元數：\", len(data))\n",
+    "            \n",
+    "            break\n",
+    "        \n",
+    "        except FileNotFoundError:\n",
+    "            print(\"找不到檔案\")\n",
+    "            \n",
+    "        except Exception as e:\n",
+    "            print(\"讀檔失敗，原因：\", e)\n",
+    "        \n",
     "else:\n",
-    "    print(maxchar)"
+    "    print(\"請輸入1或2\")\n",
+    "\n",
+    "y = input(\"請輸入一個文字，計算文字出現的次數：\")\n",
+    "print(\"共出現\", data.count(y), \"次\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "請輸入1或2：\n",
+      "1.輸入一段文字\n",
+      "2.讀取一個檔案 1\n",
+      "輸入一段文字，統計字元數 333356\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "你用了 6 個文字述說內心的想法\n",
+      "333356\n",
+      "總字元數： 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "#請使用者輸入一段文字或讀取一個檔案，印出前50字元，統計字元數\n",
+    "#把'。，\\n；：？「」'的標點符號去除，印出前50字元，並再次統計字元數\n",
+    "\n",
+    "import os\n",
+    "\n",
+    "x = int(input(\"請輸入1或2：\\n1.輸入一段文字\\n2.讀取一個檔案\"))\n",
+    "\n",
+    "if x == 1:\n",
+    "    data = input(\"輸入一段文字，統計字元數\")\n",
+    "    print(\"你用了 %d 個文字述說內心的想法\" % (len(data)))\n",
+    "\n",
+    "elif x == 2:\n",
+    "    \n",
+    "    while True:\n",
+    "        print(f\"當前檔案位置為：{os.getcwd()}\") \n",
+    "        filename = input(\"輸入檔案名稱（例如：123.txt）：\")\n",
+    "        \n",
+    "        try:\n",
+    "            with open(filename, \"r\", encoding=\"big5\") as f:\n",
+    "                data = f.read()\n",
+    "            \n",
+    "            print(data[:50])\n",
+    "                \n",
+    "            print(\"總字元數：\", len(data))\n",
+    "            \n",
+    "            break\n",
+    "        \n",
+    "        except FileNotFoundError:\n",
+    "            print(\"找不到檔案\")\n",
+    "            \n",
+    "        except Exception as e:\n",
+    "            print(\"讀檔失敗，原因：\", e)\n",
+    "        \n",
+    "else:\n",
+    "    print(\"請輸入1或2\")\n",
+    "    exit()\n",
+    "\n",
+    "for i in '。，；：？「」\\n':\n",
+    "    # print(i)\n",
+    "    data = data.replace(i, '')\n",
+    "\n",
+    "print(data[:50])\n",
+    "    \n",
+    "print(\"總字元數：\", len(data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "請輸入1或2：\n",
+      "1.輸入一段文字\n",
+      "2.讀取一個檔案 1\n",
+      "輸入一段文字，統計字元數 56449321434\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "你用了 11 個文字述說內心的想法\n",
+      "出現最多次的字為： 4 ，共出現 4 次\n"
+     ]
+    }
+   ],
+   "source": [
+    "#請使用者輸入一段文字或讀取一個檔案\n",
+    "#把'。，\\n；：？「」'的標點符號去除\n",
+    "#目前已知出現最多次的字的次數\n",
+    "#目前已知出現最多次的字\n",
+    "\n",
+    "import os\n",
+    "\n",
+    "x = int(input(\"請輸入1或2：\\n1.輸入一段文字\\n2.讀取一個檔案\"))\n",
+    "\n",
+    "if x == 1:\n",
+    "    data = input(\"輸入一段文字，統計字元數\")\n",
+    "    print(\"你用了 %d 個文字述說內心的想法\" % (len(data)))\n",
+    "\n",
+    "elif x == 2:\n",
+    "    \n",
+    "    while True:\n",
+    "        print(f\"當前檔案位置為：{os.getcwd()}\") \n",
+    "        filename = input(\"輸入檔案名稱（例如：123.txt）：\")\n",
+    "        \n",
+    "        try:\n",
+    "            with open(filename, \"r\", encoding=\"big5\") as f:\n",
+    "                data = f.read()\n",
+    "            \n",
+    "            break\n",
+    "        \n",
+    "        except FileNotFoundError:\n",
+    "            print(\"找不到檔案\")\n",
+    "            \n",
+    "        except Exception as e:\n",
+    "            print(\"讀檔失敗，原因：\", e)\n",
+    "        \n",
+    "else:\n",
+    "    print(\"請輸入1或2\")\n",
+    "    exit()\n",
+    "\n",
+    "for i in '。，；：？「」\\n':\n",
+    "    # print(i)\n",
+    "    data = data.replace(i, '')\n",
+    "\n",
+    "maxct = 0\n",
+    "maxchar = ''\n",
+    "\n",
+    "for astr in data:\n",
+    "    \n",
+    "    act = data.count(astr)\n",
+    "    \n",
+    "    if act > maxct:\n",
+    "        maxct = act\n",
+    "        maxchar = astr\n",
+    "        \n",
+    "print(\"出現最多次的字為：\",maxchar, \"，共出現\", maxct, \"次\")"
    ]
   },
   {
