--- a/Unit01_Crash Course on Python.ipynb
+++ b/Unit01_Crash Course on Python.ipynb
@@ -1060,33 +1060,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "What is your email address?:  water7083@gmail.com\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your username is water7083 and your domain name is gmail.com.\n"
+     ]
+    }
+   ],
    "source": [
     "# Get user email address\n",
     "email = input(\"What is your email address?: \").strip()\n",
     "\n",
     "# Slice out the user name\n",
-    "\n",
+    "# user_name = email[:email.index('@')]\n",
     "\n",
     "# Slice the domain name\n",
+    "# domain_name = email[email.index('@')+1:len(email)]\n",
     "\n",
+    "user_name, domain_name = email.split('@')\n",
     "\n",
     "# Format message\n",
-    "output = \"Your username is '{}' and your domain name is '{}'\".format(user_name,domain_name)\n",
+    "# output = \"Your username is '{}' and your domain name is '{}'\".format(user_name,domain_name)\n",
     "\n",
     "# Display output message\n",
-    "print(output)\n",
+    "# print(output)\n",
     "\n",
+    "print(f\"Your username is {user_name} and your domain name is {domain_name}.\")\n",
     "\n",
     "domain = {'gmail.com':'Google','yahoo.com.tw':'Yahoo','ntu.edu.tw':'臺大','hotmail.com.tw':'Hotmail','hotmail.com':'Hotmail'}\n",
-    "if ??????:\n",
-    "    output = \"這是註冊在 {} 之下的 Email 地址'\".format(??????)\n",
+    "\n",
+    "if domain_name in domain: \n",
+    "    output = \"這是註冊在 {} 之下的 Email 地址'\".format(domain[domain_name])\n",
     "else:\n",
-    "    \n",
-    "    output = \"這是在 {} 之下自定義域\".format(??????)\n",
-    "print(output)"
+    "    output = \"這是在 {} 之下自定義域\".format(domain[domain_name])"
    ]
   },
   {
