--- a/Unit01_Crash Course on Python.ipynb
+++ b/Unit01_Crash Course on Python.ipynb
@@ -1128,24 +1128,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "數學及格但英文不及格的同學名單: {'美環', '光彦'}\n",
+      "數學不及格但英文及格的同學名單: {'野口', '丸尾'}\n",
+      "兩者皆及格名單: {'柯南', '步美', '灰原'}\n"
+     ]
+    }
+   ],
    "source": [
     "m={'柯南','灰原','步美','美環','光彦'}\n",
     "e={'柯南','灰原','丸尾','野口','步美'}\n",
-    "a=m.intersection(e)\n",
-    "b=m.difference(a)\n",
-    "c=e.difference(a)\n",
-    "a1=list(a)\n",
-    "b1=list(b)\n",
-    "c1=list(c)\n",
-    "b1.sort()\n",
-    "print(b1)\n",
-    "c1.sort()\n",
-    "print(c1)\n",
-    "a1.sort()\n",
-    "print(a1)\n"
+    "\n",
+    "print(f\"數學及格但英文不及格的同學名單: {m-e}\")\n",
+    "print(f\"數學不及格但英文及格的同學名單: {e-m}\")\n",
+    "print(f\"兩者皆及格名單: {m&e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "數學及格但英文不及格的同學名單: {'美環', '光彦'}\n",
+      "數學不及格但英文及格的同學名單: {'野口', '丸尾'}\n",
+      "兩者皆及格名單: {'柯南', '步美', '灰原'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "m={'柯南','灰原','步美','美環','光彦'}\n",
+    "e={'柯南','灰原','丸尾','野口','步美'}\n",
+    "\n",
+    "print(f\"數學及格但英文不及格的同學名單: {m.difference(e)}\")\n",
+    "print(f\"數學不及格但英文及格的同學名單: {e.difference(m)}\")\n",
+    "print(f\"兩者皆及格名單: {m.intersection(e)}\")"
    ]
   },
   {
@@ -1183,9 +1209,9 @@
     "import os\n",
     "\n",
     "# 請使用者輸入或指定要查詢的路徑\n",
-    "yourPath = input()\n",
+    "filename = input(\"請輸入（例如：\\testfile）或指定要查詢的路徑：\")\n",
     "# 列出指定路徑底下所有檔案(包含資料夾)\n",
-    "allFileList = os.listdir(yourPath)\n",
+    "allFileList = os.listdir()\n",
     "\n",
     "# 逐一查詢檔案清單\n",
     "for file in allFileList:\n",
