unit1 finish ver1

--- a/Unit1/Unit01_Crash Course on Python.ipynb
+++ b/Unit1/Unit01_Crash Course on Python.ipynb
@@ -1202,27 +1202,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "請輸入（例如：testfile）或指定要查詢的路徑： testfile\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['file1', 'file2', 'hw_07945001.txt', 'hw_079450010.doc', 'hw_07945002.txt', 'hw_07945003.txt', 'hw_07945004.txt', 'hw_07945005.txt', 'hw_07945007.txt', 'hw_07945008.txt', 'hw_07945009.txt']\n",
+      "I'm a directory: file1\n",
+      "I'm a directory: file2\n",
+      "I'm a File: hw_07945001.txt\n",
+      "I'm a File: hw_079450010.doc\n",
+      "I'm a File: hw_07945002.txt\n",
+      "I'm a File: hw_07945003.txt\n",
+      "I'm a File: hw_07945004.txt\n",
+      "I'm a File: hw_07945005.txt\n",
+      "I'm a File: hw_07945007.txt\n",
+      "I'm a File: hw_07945008.txt\n",
+      "I'm a File: hw_07945009.txt\n",
+      "['07945001', '079450010', '07945002', '07945003', '07945004', '07945005', '07945007', '07945008', '07945009']\n",
+      "檔案已成功儲存至 output_data.csv\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "\n",
     "# 請使用者輸入或指定要查詢的路徑\n",
-    "filename = input(\"請輸入（例如：\\testfile）或指定要查詢的路徑：\")\n",
+    "filename = input(\"請輸入（例如：testfile）或指定要查詢的路徑：\")\n",
     "# 列出指定路徑底下所有檔案(包含資料夾)\n",
-    "allFileList = os.listdir()\n",
+    "allFileList = os.listdir(filename)\n",
+    "\n",
+    "print(allFileList)\n",
+    "\n",
+    "ID = []\n",
     "\n",
     "# 逐一查詢檔案清單\n",
     "for file in allFileList:\n",
-    "#   這邊也可以視情況，做檔案的操作(複製、讀取...等)\n",
-    "#   使用isdir檢查是否為目錄\n",
+    "\n",
+    "    #   這邊也可以視情況，做檔案的操作(複製、讀取...等)\n",
+    "#   使用isdir檢查是否為目錄    \n",
     "#   使用join的方式把路徑與檔案名稱串起來(等同filePath+fileName)\n",
-    "    if os.path.isdir(os.path.join(yourPath,file)):\n",
+    "    if os.path.isdir(os.path.join(filename, file)):\n",
     "        print(\"I'm a directory: \" + file)\n",
+    "\n",
     "    #   使用isfile判斷是否為檔案\n",
-    "    elif os.path.isfile(os.path.join(yourPath,file)):\n",
-    "        print(\"I'm a File: \" + file)\n"
+    "    elif os.path.isfile(os.path.join(filename, file)):\n",
+    "        stnum = file[file.index('_') + 1:file.index('.')]\n",
+    "        ID.append(stnum)\n",
+    "        print(\"I'm a File: \" + file)\n",
+    "\n",
+    "print(ID)\n",
+    "\n",
+    "newfile = 'output_data.csv'\n",
+    "\n",
+    "with open(newfile, 'w', encoding='utf-8') as file:\n",
+    "    for item in ID:\n",
+    "        file.write(item + '\\n')\n",
+    "    # file.write(str(ID))\n",
+    "    \n",
+    "print(f\"檔案已成功儲存至 {newfile}\")"
    ]
   },
   {
@@ -1248,19 +1295,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "輸入一個數字，建立幾個資料夾 3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['f1', 'f2', 'f3']\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['f2', 'f3', 'folder1']\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['f2', 'f3']\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter \n",
+      "Enter \n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import shutil\n",
     "\n",
+    "# 在目前所在的目錄下建立一files資料夾\n",
     "if os.path.exists('files'):\n",
     "    shutil.rmtree('files')\n",
     "os.mkdir('files')\n",
     "\n",
-    "n = int(input())\n",
-    "\n"
+    "# 令使用者輸入一數字N，並在files資料夾中建立f1, f2… fN等N個資料夾後列出files的資料夾內容\n",
+    "n = int(input(\"輸入一個數字，建立幾個資料夾\"))\n",
+    "\n",
+    "os.chdir('files')\n",
+    "\n",
+    "for i in range(1, n+1):\n",
+    "    os.mkdir('f' + str(i))\n",
+    "print(sorted(os.listdir()))\n",
+    "\n",
+    "a = input(\"Enter\")\n",
+    "\n",
+    "# 將files資料夾裡的f1資料夾重新命名成folder1後再列出files的資料夾內容\n",
+    "os.rename('f1', 'folder1')\n",
+    "print(sorted(os.listdir()))\n",
+    "\n",
+    "a = input(\"Enter\")\n",
+    "\n",
+    "# 移除files資料夾中的folder1後再列出files的資料夾內容\n",
+    "os.rmdir('folder1')\n",
+    "print(sorted(os.listdir()))\n",
+    "\n",
+    "a = input(\"Enter\")\n",
+    "\n",
+    "# 退出files資料夾(os.chdir(../))\n",
+    "os.chdir('../')\n",
+    "\n",
+    "a = input(\"Enter\")\n",
+    "\n",
+    "# 最後移除files資料夾\n",
+    "shutil.rmtree('files')"
    ]
   },
   {
@@ -1279,32 +1406,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Palindrome checker\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Please enter a word, phrase, or a sentence \n",
+      "to check if it is a palindrome:  JK-KJ\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['j', 'k', '-', 'k', 'j']\n",
+      "['j', 'k', 'k', 'j']\n",
+      "The text you have entered is a palindrome!\n",
+      "\n",
+      "Done\n"
+     ]
+    }
+   ],
    "source": [
+    "# 請使用者輸入一串字串，先轉換字串為統一小寫\n",
     "def convertInputString():\n",
-    "    #請使用者輸入一串字串，先轉換字串為統一小寫\n",
     "    rawInput = input(\"\\nPlease enter a word, phrase, or a sentence \\nto check if it is a palindrome: \") \n",
-    "    return ???\n",
+    "    newraw = list(rawInput.lower())\n",
+    "    return newraw\n",
     "\n",
+    "# 去除相關標點符號\n",
+    "def stripAnalphabetics(dirtyList):\n",
+    "    analphabeticList = [\" \", \"-\", \".\", \",\", \":\", \";\", \"!\", \"?\", \"'\", \"\\\"\"]\n",
+    "    alphabeticOnlyList = []\n",
+    "    for item in dirtyList:\n",
+    "        if item not in analphabeticList:\n",
+    "            alphabeticOnlyList.append(item)\n",
+    "    return alphabeticOnlyList\n",
+    "\n",
+    "'''\n",
     "def stripAnalphabetics(dirtyList): \n",
     "    analphabeticList = [\" \", \"-\", \".\", \",\", \":\", \";\", \"!\", \"?\", \"'\", \"\\\"\"] \n",
-    "    #去除相關標點符號\n",
-    "    return ???\n",
+    "    for character in analphabeticList:\n",
+    "        if character in dirtyList:\n",
+    "            dirtyList.remove(character)\n",
+    "            return stripAnalphabetics(dirtyList)\n",
+    "    return dirtyList\n",
     "\n",
+    "input -ab*\n",
+    " removeSign(-ab*){   \n",
+    "    #if #1 sign\n",
+    "        removeSign(ab*)\n",
+    "}\n",
+    "'''\n",
+    "\n",
+    "# 判斷是否回文\n",
     "def runPalindromeCheck(straightList):\n",
     "    reversedList = straightList[::-1] \n",
-    "    if ????: \n",
+    "    if reversedList == straightList:\n",
     "        return \"The text you have entered is a palindrome!\" \n",
     "    else: \n",
     "        return \"The text you have entered is not a palindrome.\" \n",
     "\n",
-    "def main(): \n",
-    "    print(\"\\nPalindrome checker\") \n",
-    "\n",
-    "\n",
-    "main() "
+    "def main():\n",
+    "    print(\"\\nPalindrome checker\")\n",
+    "    lowerstring = convertInputString()\n",
+    "    alphabeticOnly = stripAnalphabetics(lowerstring)\n",
+    "    result = runPalindromeCheck(alphabeticOnly)\n",
+    "    print(lowerstring)\n",
+    "    print(alphabeticOnly)\n",
+    "    print(result)\n",
+    "    print(\"Done\")\n",
+    "main()"
    ]
   },
   {
@@ -1378,51 +1561,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "廖冠霖 142\n",
+      "王力中 124\n",
+      "張平舜 108\n",
+      "洪婷婷 128\n",
+      "林士雨 86\n",
+      "陳宗翰 28\n",
+      "洪偉珊 134\n",
+      "顏又芹 32\n",
+      "王亦夏 55\n",
+      "姚成華 77\n",
+      "潘詠月 144\n",
+      "倪浩迪 163\n",
+      "郭心怡 109\n",
+      "黃政聖 99\n",
+      "顏曉雲 135\n",
+      "彭曉雯 77\n",
+      "葉健仁 117\n",
+      "賴軒年 167\n",
+      "韓致遠 52\n",
+      "陳常芝 80\n",
+      "黃佩樺 108\n",
+      "林詩虹 178\n",
+      "黃心卿 96\n",
+      "郭奕全 101\n",
+      "游子揚 127\n",
+      "杜茜行 107\n",
+      "李美一 64\n",
+      "陳姿茜 77\n",
+      "涂珮瑜 134\n",
+      "夏明哲 111\n"
+     ]
+    }
+   ],
    "source": [
-    "fin_E = open(??????,\"r\",encoding='UTF-8')\n",
-    "fin_M = open(??????,\"r\",encoding='UTF-8')\n",
-    "lisE=[]\n",
-    "lisM=[]\n",
-    "name=[]\n",
+    "fin_E = open('data/english_list.csv', 'r', encoding = 'UTF-8-sig')\n",
+    "fin_M = open('data/math_list.csv', 'r', encoding = 'UTF-8-sig')\n",
+    "\n",
+    "list_E = []\n",
+    "list_M = []\n",
+    "name = []\n",
+    "score = []\n",
+    "\n",
+    "\n",
     "for line in fin_E.readlines():\n",
-    "    line = line.strip().split(\",\")\n",
-    "    ???\n",
-    "    ???\n",
+    "    line = line .strip().split(\",\")\n",
+    "    name.append(line[0])\n",
+    "    list_E.append(line[1])\n",
     "    \n",
     "for line in fin_M.readlines():\n",
-    "    line = line.strip().split(\",\")\n",
-    "    ???\n",
-    "    \n",
-    "score=[]\n",
-    "fout = open(\"Score.csv\",\"w\")\n",
-    "line=''\n",
-    "for i in range(???,???):\n",
-    "    score.append(int(lisE[i])+int(lisM[i]))\n",
-    "    list1 = [name[i],str(score[i-1]),\"\\n\"]\n",
-    "    print(name[i],str(score[i-1]))\n",
+    "    line = line .strip().split(\",\")\n",
+    "    list_M.append(line[1])\n",
+    "\n",
+    "'''\n",
+    "print(list_E)\n",
+    "print(list_M)\n",
+    "print(name)\n",
+    "print(name, list_E, list_M)\n",
+    "'''\n",
+    "\n",
+    "fout = open('Score.csv', 'w')\n",
+    "\n",
+    "line = ''\n",
+    "\n",
+    "for i in range(1,len(name)):\n",
+    "    score.append(int(list_E[i])+int(list_M[i]))\n",
+    "    list1 = [name[i], str(score[i-1]), '\\n']\n",
+    "    print(name[i], str(score[i-1]))\n",
     "    \n",
     "    line = \",\".join(list1)\n",
     "    fout.write(line)\n",
+    "\n",
     "fin_E.close()\n",
     "fin_M.close()\n",
-    "fout.close()\n",
-    "'''\n",
-    "line=''\n",
-    "fout = open(\"Score.csv\",\"r\")\n",
-    "for i in (len(name)):\n",
-    "    print()\n",
-    "'''\n"
+    "fout.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
