unit1 finish ver2 add pop, delete title

--- a/Unit1/Unit01_Crash Course on Python.ipynb
+++ b/Unit1/Unit01_Crash Course on Python.ipynb
@@ -1561,7 +1561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1631,10 +1631,14 @@
     "\n",
     "line = ''\n",
     "\n",
-    "for i in range(1,len(name)):\n",
+    "name.pop(0)\n",
+    "list_E.pop(0)\n",
+    "list_M.pop(0)\n",
+    "\n",
+    "for i in range(len(name)):\n",
     "    score.append(int(list_E[i])+int(list_M[i]))\n",
-    "    list1 = [name[i], str(score[i-1]), '\\n']\n",
-    "    print(name[i], str(score[i-1]))\n",
+    "    list1 = [name[i], str(score[i]), '\\n']\n",
+    "    print(name[i], str(score[i]))\n",
     "    \n",
     "    line = \",\".join(list1)\n",
     "    fout.write(line)\n",
